test/types/range/diten/badRange2.good
badRange2.chpl:5: error: parallel iteration is not supported over unbounded ranges
