test/types/range/diten/badRange2.chpl
proc foo(i: int) {
  writeln(i);
}

foo(..);
